--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
@@ -47,7 +48,8 @@
     "eslint": "^8.17.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.1",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "redux-devtools-extension": "^2.13.9"
   },
   "lint-staged": {
     "*.{js, jsx}": "eslint --cache --fix",
